feat(java-11): Tests run individually against JDK 11
* Replace internal ASM dependency with external library
* Replace EA Loader for tests